DuPont DevSB/src/objects/ServiceContract.object
<CustomObject>
    <fields>
        <fullName>Entitlement_End_Code__c</fullName>
        <description>Last number in a range of codes</description>
        <inlineHelpText>Last number in a range of codes</inlineHelpText>
        <label>Entitlement End Code</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entitlement_Start_Code__c</fullName>
        <description>First number in a range of codes</description>
        <inlineHelpText>First number in a range of codes</inlineHelpText>
        <label>Entitlement Start Code</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product related to this service contract</description>
        <inlineHelpText>Product related to this service contract</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Material__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ERP Material – General Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Service Contracts</relationshipLabel>
        <relationshipName>Service_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.APPROVALSTATUS</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <columns>CONTRACT.ENDDATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Contracts</label>
    </listViews>
    <listViews>
        <fullName>BI_Service_Contracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Entitlement_Start_Code__c</columns>
        <columns>Entitlement_End_Code__c</columns>
        <columns>CONTRACT.STARTDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>ServiceContract.BI_EMEA_Service_Contract</value>
        </filters>
        <label>BI-EMEA Service Contracts</label>
        <language>en_US</language>
        <sharedTo>
            <role>BuildingInnovations</role>
            <roleAndSubordinatesInternal>BIEMEAAdmin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BI_EMEA_Service_Contract</fullName>
        <active>true</active>
        <description>BI-EMEA Service Contract</description>
        <label>BI-EMEA Service Contract</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>